# Hotel_list

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: lista.txt
include/: columns.h  main_window.h
sourceFiles/: columns.cpp  main_window.cpp
